# snowman

./: .gitignore
src/: CMakeLists.txt
src/debin_dump/: CMakeLists.txt  main.cpp
src/nc/core/: Context.h  MasterAnalyzer.cpp
src/nc/core/ir/calling/: Signatures.h
src/nc/core/ir/cgen/: CodeGenerator.h  DefinitionGenerator.cpp  DefinitionGenerator.h
